Wrong design of button on mobiles possible fix

--- a/src/styles/EmailPanel.scss
+++ b/src/styles/EmailPanel.scss
@@ -16,6 +16,7 @@
   border: 2px solid;
   border-color: $primary-color;
   color: $primary-color;
+  -webkit-appearance: none;
 }
 
 #submit:hover {
